route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: httpd-service
  namespace: florian-ns
spec:
  port:
    targetPort: http
  to:
    kind: Service
    name: httpd-service
    weight: 100
